Apply xypriv, add unittest

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ MONGO_INITDB_DATABASE=xyauthdb
 MONGO_INITDB_ROOT_USERNAME=xyauth
 MONGO_INITDB_ROOT_PASSWORD=password
 
+XYBOR_INIT_ADMIN_EMAIL=admin@xybor.space
+XYBOR_INIT_ADMIN_PASSWORD=root@1234
 
 # If you are using shell, let use these following commands to export keys.
 #
