--- a/configs/compose.ini
+++ b/configs/compose.ini
@@ -18,3 +18,6 @@ mongo_initdb_root_username=xyauth
 mongo_initdb_root_password=password
 
 mongo_express_port=8081
+
+xybor_init_admin_email=admin@xybor.space
+xybor_init_admin_password=root@1234
