--- a/deploy/compose.yaml.template
+++ b/deploy/compose.yaml.template
@@ -79,6 +79,8 @@ services:
       - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE:-{{ .default.mongo_initdb_database }}}
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME:-{{ .default.mongo_initdb_root_username }}}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD:-{{ .default.mongo_initdb_root_password }}}
+      - XYBOR_INIT_ADMIN_EMAIL=${XYBOR_INIT_ADMIN_EMAIL:-{{ .default.xybor_init_admin_email }}}
+      - XYBOR_INIT_ADMIN_PASSWORD=${XYBOR_INIT_ADMIN_PASSWORD:-{{ .default.xybor_init_admin_password }}}
       - SERVER_PRIVATE_KEY
       - SERVER_PUBLIC_KEY
       - OAUTH_PRIVATE_KEY
