Allow redirecting to HTTPS if user access via HTTP

--- a/configs/default.ini
+++ b/configs/default.ini
@@ -14,9 +14,9 @@ loglevel=10
 
 [server]
 domain=localhost
-# If the server is run in container, the host must be 0.0.0.0.
 host=0.0.0.0
-port=8443
+port=8080
+tls_port=8443
 
 [postgresql]
 host=localhost
