Allow adding additional configs from s3

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,10 @@ MONGO_INITDB_ROOT_PASSWORD=password
 XYBOR_INIT_ADMIN_EMAIL=admin@xybor.space
 XYBOR_INIT_ADMIN_PASSWORD=root@1234
 
+AWS_REGION=ap-southeast-1
+AWS_ACCESS_KEY_ID=<your_key_id>
+AWS_SECRET_ACCESS_KEY=<your_key>
+
 # If you are using shell, let use these following commands to export keys.
 #
 # export SERVER_PRIVATE_KEY=`cat server.key`
