--- a/configs/default.ini
+++ b/configs/default.ini
@@ -2,7 +2,7 @@
 environment=dev
 
 # The watching cycle duration of environment variables.
-env_watch_cycle=1m
+config_watch=1m
 
 # NOTLOG   = 1000
 # CRITICAL = 50
@@ -11,6 +11,10 @@ env_watch_cycle=1m
 # INFO     = 20
 # DEBUG    = 10
 loglevel=10
+
+# This value defines overridden configuration files. Many files can be defined
+# with colon-separated.
+additions=s3://xyauth/configs/default.ini
 
 [server]
 domain=localhost
