Allow using existing database instead of standalone

--- a/configs/10-default.ini
+++ b/configs/10-default.ini
@@ -14,7 +14,7 @@ loglevel=10
 
 # This value defines overridden configuration files. Many files can be defined
 # with colon-separated.
-additions=s3://xyauth/configs/default.ini
+# additions=s3://xyauth/configs/50-default.ini,s3://xyauth/configs/60-compose.ini
 
 [server]
 domain=localhost
@@ -36,8 +36,18 @@ retries=3
 retry_duration=10s
 
 [mongodb]
+scheme=mongodb
 host=localhost
 port=27017
+
+## This value defines the certificates to connect to database (if any).
+#ssl_ca_certs=s3://xyauth/certs/rds-combined-ca-bundle.pem
+
+## Remove these following comments to add options into connection string.
+#tls=true
+#replicaSet=rs0
+#readPreference=secondaryPreferred
+#retryWrites=false
 
 [oauth]
 issuer=xyauth
