--- a/configs/20-compose.ini
+++ b/configs/20-compose.ini
@@ -1,19 +1,21 @@
 [postgresql]
 host=postgresql
+deployment=compose # Available values: compose, cloud
 
 [mongodb]
 host=mongodb
+deployment=compose # Available values: compose, cloud
 
 [default]
-postgres_user=xyauth
-postgres_password=password
-postgres_db=authdb
+postgres_db=xyauthdb
+postgres_user=postgres
+postgres_password=postgres
 
 pgadmin_default_email=pgadmin@xyauth.com
 pgadmin_default_password=password
 pgadmin_port=5050
 
-mongo_initdb_database=authdb
+mongo_initdb_database=xyauthdb
 mongo_initdb_root_username=xyauth
 mongo_initdb_root_password=password
 
