Certificates and keys should be stored on s3

--- a/deploy/compose.yaml.template
+++ b/deploy/compose.yaml.template
@@ -81,6 +81,7 @@ services:{{ if eq .postgresql.deployment "compose" }}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD:-{{ .default.mongo_initdb_root_password }}}
       - XYBOR_INIT_ADMIN_EMAIL=${XYBOR_INIT_ADMIN_EMAIL:-{{ .default.xybor_init_admin_email }}}
       - XYBOR_INIT_ADMIN_PASSWORD=${XYBOR_INIT_ADMIN_PASSWORD:-{{ .default.xybor_init_admin_password }}}
+      - MONGO_SSL_CA_CERTS
       - AWS_REGION
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
